Updating library versions, switching from Cassandra to MongoDB, starting DBs with docker